# tree-sitter-gritql

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  add_language.py  binding.gyp  grammar.js  package.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pr-lint.yml  publish.yml  setup.yml
bindings/node/: binding.cc  index.js
bindings/rust/: build.rs  lib.rs
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: ffi.txt  private.txt
